hello_world_test/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-httpd
  namespace: cnvrg
  labels:
    app: hello-world
spec:
  containers:
    - name: cntr-httpd
      image: httpd:latest
      ports:
        - containerPort: 80
